<resources>
    <string name="app_name">MyCalculator</string>
    <string name="appName">Basic Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="Add">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="Subs">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Divide">/</string>
    <string name="zero">0</string>
    <string name="mode">%</string>
    <string name="multiply">*</string>
    <string name="equals">=</string>
    <string name="AC">AC</string>
</resources>