<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_input"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="end"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/user_input"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/output"
        android:layout_centerInParent="true"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/btn1"
            android:background="@drawable/bg"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/btn2"
            android:background="@drawable/bg"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="NotSibling" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/btn3"
            android:background="@drawable/custom_bg"
            android:text="@string/Add"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btn1"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btn2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/btn4"
            android:background="@drawable/bg"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btn3"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/btn5"
            android:background="@drawable/bg"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubs"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btnAdd"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/btn6"
            android:background="@drawable/custom_bg"
            android:text="@string/Subs"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btn4"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btn5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/btn7"
            android:background="@drawable/bg"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btn6"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/btn8"
            android:background="@drawable/bg"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Divide"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btnSubs"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/btn9"
            android:background="@drawable/custom_bg"
            android:text="@string/Divide"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btn7"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAC"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btn8"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/btn0"
            android:background="@drawable/custom_bg2"
            android:text="@string/AC"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Equal"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btn9"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/btnAC"
            android:background="@drawable/custom_bg2"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Multiply"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/btn_Divide"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/btn_Equal"
            android:background="@drawable/custom_bg"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>
</RelativeLayout>
